syntax = "proto3";

package api;

service SimpleService {
  rpc Unary (SimpleRequest) returns (SimpleResponse) {}
  rpc ClientStreaming (stream SimpleRequest) returns (SimpleResponse) {}
  rpc ServerStreaming (SimpleRequest) returns (stream SimpleResponse) {}
  rpc BidiStreaming(stream SimpleRequest) returns (stream SimpleResponse) {}
}

message SimpleRequest {
  string name = 1;
}

message SimpleResponse {
  string message = 1;
}
